# dzip-cli

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: mod.rs  pack.rs  unpack.rs  verify.rs
core/: Cargo.toml
core/src/: lib.rs  path.rs  reader.rs  volume.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: fs.rs  main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: codec.rs  lib.rs  model.rs  pack.rs  unpack.rs
src/: compression.rs  constants.rs  lib.rs  main.rs  pack.rs  types.rs  unpack.rs  utils.rs
