[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2024"
repository = "https://github.com/LambdaEd1th/dzip-rs"

[workspace.dependencies]
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
