[package]
name = "dzip-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
dzip-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.100"
serde.workspace = true
toml = "0.9.11"
log.workspace = true
env_logger = "0.11"

rayon = "1.11.0"
indicatif = "0.18.3"
